<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Fragments.LoginFragment">

    <!-- Toolbar with Settings Cog -->

    <!-- Logo -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:background="@color/light_gray"
        android:elevation="4dp"
        android:paddingEnd="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/cogIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="Settings Cog Icon"
            android:focusable="true"
            android:padding="12dp"
            android:src="@drawable/baseline_settings_24"
            android:tint="@android:color/white" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:layout_gravity="center"
        android:src="@drawable/dblogo"
        android:contentDescription="DB Logo" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:hint="Enter User Name"
        android:inputType="textEmailAddress"
        android:contentDescription="Enter Email Address" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:contentDescription="Enter Password" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="L o g i n"
        android:textColor="#fff"
        android:textSize="16sp"
        android:contentDescription="Login Button" />

    <!-- Register Text -->
    <TextView
        android:id="@+id/registerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="Don't have an account? Sign Up Here!"
        android:contentDescription="Click here to register new account" />

    <!-- Biometric Button -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageButton
            android:id="@+id/biometricBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_fingerprint"
            android:contentDescription="Biometric Login"
            android:textColor="#fff"
            android:textSize="16sp" />
    </FrameLayout>

    <!-- Version Text -->
    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version 1.6.0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

</LinearLayout>