...
        android:text="Welcome"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp" />

    <!-- User Name -->
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:layout_below="@id/welcomeText" />
...
